[gd_scene load_steps=19 format=3 uid="uid://rbfpjc1ipqyr"]

[ext_resource type="Script" path="res://Rooms/My_rooms/Stage_Boss/r_boss.gd" id="1_4nee7"]
[ext_resource type="PackedScene" uid="uid://bm40t36a6m8sc" path="res://Objects/Tiles/til32x32.tscn" id="1_b2h4h"]
[ext_resource type="Script" path="res://Rooms/My_rooms/Stage_Boss/Intro.gd" id="2_i61b3"]
[ext_resource type="PackedScene" uid="uid://byy0nyaw6gtki" path="res://Objects/Room_objects/objMusicPlayer.tscn" id="2_ro6vu"]
[ext_resource type="PackedScene" uid="uid://b3v5su3t4jrq8" path="res://Objects/Room_objects/objCameraFixedNoSmoothing.tscn" id="3_sbg1e"]
[ext_resource type="AudioStream" uid="uid://dfril5dm2066f" path="res://Audio/Music/boss.ogg" id="3_vslpb"]
[ext_resource type="AudioStream" uid="uid://cbtxeavsqivpn" path="res://Audio/Music/musLevel01.ogg" id="4_27w03"]
[ext_resource type="PackedScene" uid="uid://bo3vrmvp7ayf8" path="res://Objects/Room_objects/objWarp.tscn" id="4_btmy2"]
[ext_resource type="PackedScene" uid="uid://bp5rqk4l7tesk" path="res://Objects/Player/objPlayer.tscn" id="5_pfun0"]
[ext_resource type="PackedScene" uid="uid://dm6g8cxx1hy78" path="res://Objects/Room_objects/objTouchSavePoint.tscn" id="6_m0pi3"]
[ext_resource type="PackedScene" uid="uid://disuddxn6h6vm" path="res://Objects/Hazards/tilSpikes.tscn" id="7_i72w6"]
[ext_resource type="PackedScene" uid="uid://bhxlpdr78sap" path="res://Objects/My_Stuff/Speed/objSpeedMultiplier.tscn" id="8_i554i"]
[ext_resource type="PackedScene" uid="uid://6nhia7wgwbde" path="res://Objects/My_Stuff/Speed/objSpeedDamage.tscn" id="9_v3p7b"]
[ext_resource type="PackedScene" uid="uid://ddnger8hwak5h" path="res://Objects/My_Stuff/Speed/objSpeedSetter.tscn" id="10_gmpeg"]
[ext_resource type="PackedScene" uid="uid://ydfe5ajko4un" path="res://Objects/My_Stuff/Speed/objSpeedAdder.tscn" id="11_acjg2"]
[ext_resource type="PackedScene" uid="uid://desnunju1h5wd" path="res://Objects/My_Stuff/Speed/objSpeedLock.tscn" id="12_erl4f"]
[ext_resource type="PackedScene" uid="uid://bm4m2hvattucr" path="res://Objects/My_Stuff/Speed/objFallingSpeed.tscn" id="13_ig2yi"]
[ext_resource type="PackedScene" uid="uid://cygteeqvo3oc" path="res://Objects/My_Stuff/Rhythm/objRhythmPreviewer.tscn" id="16_0uul7"]

[node name="rBoss" type="Node2D"]
script = ExtResource("1_4nee7")
metadata/_edit_lock_ = true

[node name="Phases" type="Node2D" parent="."]

[node name="Intro-Intro" type="Node2D" parent="Phases"]
script = ExtResource("2_i61b3")

[node name="InitialGreenBeam" type="Area2D" parent="Phases/Intro-Intro"]
position = Vector2(416, 192)

[node name="Polygon2D" type="Polygon2D" parent="Phases/Intro-Intro/InitialGreenBeam"]
color = Color(0.423529, 0.811765, 0.34902, 0.654902)
polygon = PackedVector2Array(0, 0, -592, 480, -488, 560)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Phases/Intro-Intro/InitialGreenBeam"]
polygon = PackedVector2Array(0, 0, -592, 480, -488, 560)

[node name="InitialRedBeam" type="Area2D" parent="Phases/Intro-Intro"]
position = Vector2(416, 192)
rotation = -1.5708

[node name="Polygon2D" type="Polygon2D" parent="Phases/Intro-Intro/InitialRedBeam"]
color = Color(0.811765, 0.235294, 0.235294, 0.654902)
polygon = PackedVector2Array(0, 0, -592, 480, -488, 560)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Phases/Intro-Intro/InitialRedBeam"]
polygon = PackedVector2Array(0, 0, -592, 480, -488, 560)

[node name="Fake-end" type="Node2D" parent="Phases"]

[node name="Debug" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ms" type="Label" parent="Debug"]
layout_mode = 0
offset_left = 40.0
offset_top = 80.0
offset_right = 80.0
offset_bottom = 120.0

[node name="beat" type="Label" parent="Debug"]
layout_mode = 0
offset_left = 40.0
offset_top = 128.0
offset_right = 80.0
offset_bottom = 168.0

[node name="shotbeat" type="Label" parent="Debug"]
layout_mode = 0
offset_left = 48.0
offset_top = 192.0
offset_right = 88.0
offset_bottom = 232.0

[node name="Environment" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="til32x32" parent="Environment" instance=ExtResource("1_b2h4h")]
layer_0/tile_data = PackedInt32Array(524288, 65536, 0, 12, 65536, 0, 0, 65536, 0, 65536, 65536, 0, 131072, 65536, 0, 196608, 65536, 0, 262144, 65536, 0, 327680, 65536, 0, 393216, 65536, 0, 458752, 65536, 0, 589824, 65536, 0, 655360, 65536, 0, 720896, 65536, 0, 786432, 65536, 0, 851968, 65536, 0, 917504, 65536, 0, 983040, 65536, 0, 1048576, 65536, 0, 1114112, 65536, 0, 1179648, 65536, 0, 1, 65536, 0, 1179649, 0, 0, 2, 65536, 0, 1179650, 0, 0, 3, 65536, 0, 1179651, 0, 0, 4, 65536, 0, 1179652, 0, 0, 5, 65536, 0, 1179653, 0, 0, 6, 65536, 0, 1179654, 0, 0, 7, 65536, 0, 1179655, 0, 0, 8, 65536, 0, 1179656, 0, 0, 9, 65536, 0, 1179657, 0, 0, 10, 65536, 0, 1179658, 0, 0, 11, 65536, 0, 1179659, 0, 0, 1179660, 0, 0, 13, 65536, 0, 1179661, 0, 0, 14, 65536, 0, 1179662, 0, 0, 15, 65536, 0, 1179663, 0, 0, 16, 65536, 0, 1179664, 0, 0, 17, 65536, 0, 1179665, 0, 0, 18, 65536, 0, 1179666, 0, 0, 19, 65536, 0, 1179667, 0, 0, 20, 65536, 0, 1179668, 0, 0, 21, 65536, 0, 1179669, 0, 0, 22, 65536, 0, 1179670, 0, 0, 23, 65536, 0, 1179671, 0, 0, 24, 65536, 0, 65560, 65536, 0, 131096, 65536, 0, 196632, 65536, 0, 262168, 65536, 0, 327704, 65536, 0, 393240, 65536, 0, 458776, 65536, 0, 524312, 65536, 0, 589848, 65536, 0, 655384, 65536, 0, 720920, 65536, 0, 786456, 65536, 0, 851992, 65536, 0, 917528, 65536, 0, 983064, 65536, 0, 1048600, 65536, 0, 1114136, 65536, 0, 1179672, 65536, 0)
metadata/_edit_lock_ = true

[node name="objMusicPlayer" parent="Environment" instance=ExtResource("2_ro6vu")]
position = Vector2(-56, 24)
song_id = ExtResource("4_27w03")

[node name="Room_related" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="objCameraFixedNoSmoothing" parent="Room_related" instance=ExtResource("3_sbg1e")]
position = Vector2(16, 16)
anchor_mode = 1
metadata/_edit_lock_ = true

[node name="objWarp" parent="Room_related" instance=ExtResource("4_btmy2")]
position = Vector2(736, 549)

[node name="objPlayer" parent="Room_related" instance=ExtResource("5_pfun0")]
position = Vector2(128, 559)

[node name="obTouchSavePoint" parent="Room_related" instance=ExtResource("6_m0pi3")]
position = Vector2(128, 560)

[node name="Gimmicks" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Hazards" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="tilSpikes" parent="Hazards" instance=ExtResource("7_i72w6")]
metadata/_edit_lock_ = true

[node name="Trigger_related" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="objSpeedMultiplier" parent="." instance=ExtResource("8_i554i")]
position = Vector2(-96, 176)

[node name="SpeedDamageBlock" parent="." instance=ExtResource("9_v3p7b")]
position = Vector2(-144, 224)

[node name="objSpeedSetter" parent="." instance=ExtResource("10_gmpeg")]
position = Vector2(-48, 176)

[node name="objSpeedAdder" parent="." instance=ExtResource("11_acjg2")]
position = Vector2(-144, 176)

[node name="objSpeedLock" parent="." instance=ExtResource("12_erl4f")]
position = Vector2(-96, 224)

[node name="objFallingSpeed" parent="." instance=ExtResource("13_ig2yi")]
position = Vector2(-48, 224)

[node name="objRhythmPreviewer" parent="." instance=ExtResource("16_0uul7")]
position = Vector2(-32, 88)
song_id = ExtResource("3_vslpb")

[connection signal="body_entered" from="Phases/Intro-Intro/InitialGreenBeam" to="Phases/Intro-Intro" method="_on_initial_green_beam_body_entered"]
[connection signal="body_exited" from="Phases/Intro-Intro/InitialGreenBeam" to="Phases/Intro-Intro" method="_on_initial_green_beam_body_exited"]
[connection signal="body_entered" from="Phases/Intro-Intro/InitialRedBeam" to="Phases/Intro-Intro" method="_on_initial_red_beam_body_entered"]
[connection signal="body_exited" from="Phases/Intro-Intro/InitialRedBeam" to="Phases/Intro-Intro" method="_on_initial_red_beam_body_exited"]
